--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # MONGO_URI="mongodb://localhost:27017/myapp"
 
-env:
-  API_KEY: ${{ secrets.API_KEY }}
-  MONGO_URI: ${{ secrets.MONGO_URI }}
+  MONGO_URI: "mongodb+srv://mongodb_Username:<mongodb_Password>@cluster0.w6o74.mongodb.net/<Database_Name>?retryWrites=true&w=majority"
+
+  PORT:3000
+
+  MyNameIs: "Sachin Kumar"
